samples/_failures_safe/1761486096_be48c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_023f8516.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_023f8516.c:159:13: error: expected expression at end of input
  159 |             case TOKEN_EOF: type_str =
      |             ^~~~
./samples/SAFE/__tmp_023f8516.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_023f8516.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_023f8516.c:159:13: error: expected declaration or statement at end of input
